log
Sun 16 Oct 2022 04:00:22 PM UTC: 
 tests:  0|4
total_score: 0/70
3e2d894
Sun 16 Oct 2022 04:09:19 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:38:16: error: ‘h’ is used uninitialized in this function [-Werror=uninitialized]
   38 |   h->heapArray = (heapElem*) malloc (sizeof(heapElem)*3);
      |   ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2202a9c
Sun 16 Oct 2022 04:09:58 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
67d3140
Sun 16 Oct 2022 04:34:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:24: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |   return (pq->heapArray[0]);
      |          ~~~~~~~~~~~~~~^~~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cf4793f
Sun 16 Oct 2022 04:34:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:27: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   return (pq->heapArray[0]->data);
      |                           ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
41958c6
Sun 16 Oct 2022 04:37:39 PM UTC: 
 heap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:17: error: incompatible types when initializing type ‘heapElem *’ {aka ‘struct nodo *’} using type ‘heapElem’ {aka ‘struct nodo’}
   22 |   heapElem* e = pq->heapArray[0];
      |                 ^~
Compilation failed
18f59a6
Sun 16 Oct 2022 04:38:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:17: error: invalid type argument of unary ‘*’ (have ‘heapElem’ {aka ‘struct nodo’})
   22 |   heapElem* e = *pq->heapArray[0];
      |                 ^~~~~~~~~~~~~~~~~
Compilation failed
bc3c568
